# ShallowStack

./: .gitignore  README.md  config.ini  main.py  makefile  pyproject.toml
lookup_tables/: hand_types.pkl  preflop.npy
notebooks/: data_test.ipynb
shallowstack/config/: __init__.py  config.py
shallowstack/game/: action.py  poker_game.py
shallowstack/neural_net/: datamodule.py  model.py  neural_net_manager.py  neural_net_trainer.py  util.py
shallowstack/player/: __init__.py  human.py  hybrid_player.py  player.py  resolve_player.py  rollout_player.py
shallowstack/poker/: card.py  hash.py  poker_oracle.py
shallowstack/poker/HenryRLee PokerHandEvaluator master python-phevaluator/: __init__.py  card.py  evaluator.py  evaluator_omaha.py  utils.py
shallowstack/poker/tables/: __init__.py  dptables.py  hashtable.py  hashtable5.py  hashtable6.py  hashtable7.py  hashtable_omaha.py
shallowstack/resolver/: __init__.py  resolver.py
shallowstack/state_manager/: __init__.py  state_manager.py
shallowstack/subtree/: __init__.py  subtree_manager.py
tests/neural_net/: test_dataloader.py
tests/poker/: test_card.py  test_poker_orakle.py
