[tool.poetry]
name = "shallowstack"
version = "0.1.0"
description = ""
authors = ["Øyvind Monsen <yvind.monsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
