[tool.poetry]
name = "shallowstack"
version = "0.1.0"
description = ""
authors = ["Øyvind Monsen <yvind.monsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
tqdm = "^4.65.0"
torch = "^2.0.0"
lightning = "^2.0.1"
pydantic = "<1.8.0"
fastapi = ">=0.80"
tensorboard = "^2.12.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
